tests/neg/i22192a.check
-- Error: tests/neg/i22192a.scala:4:12 ---------------------------------------------------------------------------------
4 |  case Some(iam = n) => // error
  |            ^^^^^^^
  |            No element named `iam` is defined in selector type (name : String)
-- [E006] Not Found Error: tests/neg/i22192a.scala:5:4 -----------------------------------------------------------------
5 |    n // error
  |    ^
  |    Not found: n
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg/i22192a.scala:9:12 ---------------------------------------------------------------------------------
9 |  case Some(iam = n) => // error
  |            ^^^^^^^
  |            No element named `iam` is defined in selector type (name : String, population : Int)
-- [E006] Not Found Error: tests/neg/i22192a.scala:10:4 ----------------------------------------------------------------
10 |    n // error
   |    ^
   |    Not found: n
   |
   | longer explanation available when compiling with `-explain`
